--- a/src/components/pet/actions.scss
+++ b/src/components/pet/actions.scss
@@ -1,10 +1,10 @@
 @layer interactions {
     .shake {
-        animation: shake 0.4s, bounce 2s 0.4s infinite;
+        animation: shake 0.4s;
     }
 
     .scale {
-        animation: scale 0.4s, bounce 2s 0.4s infinite;
+        animation: scale 0.4s;
     }
 
     @keyframes scale {
