--- a/src/components/pet/pet.scss
+++ b/src/components/pet/pet.scss
@@ -1,64 +1,47 @@
 @use "actions" as *;
 
-@layer pet {
+@layer pet {    
+    .pet {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        gap: 1rem;
+        width: 100%;
 
-    button {
-        padding: 10px 20px;
-        background-color: #007bff;
-        color: #ffffff;
-        border: none;
-        border-radius: 4px;
-        cursor: pointer;
+        grid-column: 2 / 3;
+        grid-row: 1 / 2;
     }
-    
-    button:hover {
-        background-color: #0056b3;
-    }
-    
+
     .action-group {
         display: flex;
-        gap: 16px;
+        gap: 1rem;
         flex-wrap: wrap;
+        width: 100%;
+        height: clamp(5rem, 100%, 10rem);
+
+        grid-column: 1 / 3;
+        grid-row: 2 / 3;
     }
     
     .reaction-box {
-        height: 200px;
-        background-color: #a6a6a6;
+        border-radius: 1rem;
+        height: 100%;
+        width: -webkit-fill-available;
+        display: grid;
+        place-items: center;
+        background-color: #5c5c5c;
         border: 1px solid #e0e0e0;
-        margin-bottom: 24px;
-        padding: 24px;
-        display: flex;
-        flex-direction: column;
-        justify-content: space-between;
-        align-items: center;
+        padding: 2rem;
     }
     
     .text {
-        font-size: 20px;
+        font-size: 1.5rem;
         font-weight: bold;
     }
     
     .character {
-        font-size: 40px;
+        font-size: 3rem;
         font-weight: bold;
         animation: bounce 2s infinite;
     }
-
-    table {
-        width: 100%;
-        border-collapse: collapse;
-    }
-
-    th, td {
-        border: 1px solid #e0e0e0;
-        padding: 8px;
-        text-align: center;
-    }
-
-    // every other row
-
-    tr:nth-child(even) {
-        background-color: #343434;
-    }
-
 }
