--- a/src/style.scss
+++ b/src/style.scss
@@ -1,4 +1,12 @@
-@layer pet, interactions;
+@layer  reset, pet, interactions;
+
+@layer reset {
+  html, * {
+    box-sizing: border-box;
+    margin: 0;
+    padding: 0;
+  }
+}
 
 :root {
   font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
