--- a/src/components/navbar/navbar.scss
+++ b/src/components/navbar/navbar.scss
@@ -2,6 +2,7 @@ nav {
     display: flex;
     gap: 1rem;
     justify-content: space-between;
+    z-index: 10;
 
     width: 100%;
     padding: 1rem 2rem;
