--- a/src/style.scss
+++ b/src/style.scss
@@ -38,6 +38,7 @@ body {
   place-items: center;
   min-width: 320px;
   min-height: 100vh;
+  overflow: hidden;
 }
 
 #app {
@@ -83,7 +84,9 @@ button > img {
 }
 
 .wrapper {
-  position: relative;
+  background-color: red;
+  position: absolute;
+  height: 100%;
   width: 100%;
   display: flex;
   flex-direction: column;
