--- a/src/style.scss
+++ b/src/style.scss
@@ -83,6 +83,11 @@ button > img {
   }
 }
 
+.main-content {
+  height: 100%;
+  position: relative;
+}
+
 .wrapper {
   background-color: red;
   position: absolute;
