--- a/src/components/bottom-bar/bottom-bar.scss
+++ b/src/components/bottom-bar/bottom-bar.scss
@@ -3,5 +3,78 @@
     padding: 1rem;
     width: 100%;
     justify-content: space-between;
-    align-items: center;
+    align-items: end;
+}
+
+.action-group {
+    display: flex;
+    flex-direction: column;
+    align-items: end;
+    gap: 1rem;
+    position: relative;
+
+    .btn-category {
+        z-index: 2;
+    }
+
+    &__menu {
+        transform: translateY(calc(-100% - 1rem));
+        display: flex;
+        flex-direction: column;
+        gap: 1rem;
+        position: absolute;
+        bottom: 0;
+        height: 100%;
+        width: 100%;
+
+        button:nth-child(1) {
+            transform: translateY(calc(-100% - 1rem));
+        }
+
+        button {
+            border-radius: 1000px;
+            padding: 0 0 0 1rem;
+            background-color: darkgray;
+            display: flex;
+            align-items: center;
+            justify-content: end;
+            gap: 1rem;
+            position: absolute;
+            bottom: 0;
+            clip-path: circle(100% at 77% 50%);
+
+            p {
+                width: 100%;
+            }
+        }
+
+        &.menu-right {
+            right: 1rem;
+            button {
+                right: 0;
+            }
+        }
+
+        &.menu-left {
+            justify-content: start;
+            left: 1rem;
+
+            button{
+                flex-direction: row-reverse;
+                padding: 0 1rem 0 0;
+            }
+        }
+
+        .btn-icon-small {
+            background: lightgray;
+            padding: 1rem;
+            border-radius: 50%;
+            display: flex;
+
+            img {
+                width: 2rem;
+                height: 2rem;
+            }
+        }
+    }
 }
