--- a/src/components/pet-status/pet-status.scss
+++ b/src/components/pet-status/pet-status.scss
@@ -1,8 +1,20 @@
 .status-box {
-    display: flex;
+    width: 100%;
+    height: 100%;
+    position: relative;
+    z-index: 9;
+    padding: 1rem;
+}
 
-    grid-column: 1 / 2;
-    grid-row: 1 / 2;
+.overlay {
+    background: rgba(0, 0, 0, 0.4);
+    width: 100%;
+    height: 100%;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    z-index: 8;
 }
 
 table {
